Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/ArrayLit.out
ArrayLit.java:10:15: compiler.err.new.not.allowed.in.annotation
1 error
